--- a/public/css/menu_mediaqueries.css
+++ b/public/css/menu_mediaqueries.css
@@ -17,6 +17,7 @@ footer.menu-footer {
     footer.menu-footer a:link, footer.menu-footer a:visited, footer.menu-footer a:hover, footer.menu-footer a:active {
       color: #555; }
 
+/* Sliding menu */
 @media all and (max-width: 768px) {
   .menu {
     display: none; }
@@ -127,6 +128,7 @@ footer.menu-footer {
     .slidermenu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
+/* Static menu */
 @media all and (min-width: 769px) {
   #menu-button {
     display: none; }
@@ -161,7 +163,7 @@ footer.menu-footer {
       .menu ul li.blank {
         list-style: none;
         width: 120px;
-        min-height: 90px; }
+        min-height: 30px; }
       .menu ul li.menu-section {
         list-style: none;
         text-align: center;
@@ -220,6 +222,7 @@ footer.menu-footer {
     .menu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
+/* Mobiles in landscape */
 @media all and (max-height: 360px) {
   .menu {
     display: none; }
@@ -279,7 +282,7 @@ footer.menu-footer {
         list-style: none;
         text-align: center;
         width: 120px;
-        min-height: 50px;
+        min-height: 30px;
         border-bottom: 1px solid #444;
         font-family: 'Helvetica Neue', sans-serif;
         color: #f2f2eb;
@@ -291,13 +294,13 @@ footer.menu-footer {
           vertical-align: middle;
           width: 120px;
           padding: 3px;
-          min-height: 50px;
+          min-height: 30px;
           font-size: 0.9em; }
       .slidermenu ul li.top {
         border-top: 1px solid #444; }
     .slidermenu i {
       color: #555;
-      font-size: 1.7em; }
+      font-size: 1.3em; }
     .slidermenu ul.sub-menu {
       display: block;
       width: 120px;
@@ -308,7 +311,7 @@ footer.menu-footer {
       background-color: #1d1d1d; }
       .slidermenu ul.sub-menu li.sub-menu-section {
         width: 120px;
-        height: 50px;
+        height: 30px;
         border-bottom: 1px solid #444;
         border-right: 5px solid transparent;
         display: table;
