--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -159,6 +159,7 @@ footer {
   .s-m {
     width: 100%;
     padding-bottom: 15px;
+    text-align: center;
     .s-m-i {
       text-align: center;
       i {
