--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -29,7 +29,7 @@ $senate_light: lighten(rgb(133, 73, 72), 50%);
 $senate_medium: lighten(rgb(133, 73, 72), 5%);
 $senate_dark: darken(rgb(133, 73, 72), 10%);
 $minister_light: lighten(#3399cc, 30%);
-$minister_medium: #3399cc;
+$minister_medium: darken(#3399cc, 5%);
 $minister_dark: darken(#3399cc, 20%);
 $orange: #f8720a;
 $blue: #0072bc;
@@ -97,6 +97,39 @@ strong {
    color: $dark_text;
 }
 
+
+/* Background colours */
+.mp_light {
+   // background: url(/images/lowerhousebg.jpg);
+   background-color: #ededed;
+}
+.mp_medium {
+   background-color: $medium;
+}
+.mp_dark {
+   background-color: $dark;
+}
+.senator_light {
+   // background: url(/images/upperhousebg.jpg);
+}
+.senator_medium {
+   background-color: $senate_medium;
+}
+.senator_dark {
+   background-color: $senate_dark;
+}
+.minister_light {
+   // background: url(/images/ministersbg.jpg);
+   background-color: #ededed;
+}
+.minister_medium {
+   background-color: $minister_medium;
+}
+.minister_dark {
+   background-color: $minister_dark;
+}
+
+
 #menu-button {
    i {
       color: lighten($dark_text, 15%);
@@ -128,6 +161,12 @@ strong {
    }
 }
 
+.button_link {
+   margin-top: 25px;
+   padding: 5px 15px;
+   border: 0;
+   color: $white;
+}
 
 h1 {
   text-align: center;
@@ -207,14 +246,8 @@ h3 {
 
 /* Select My MP Page */
 
-.contents {
-   position: relative;
-   z-index: 1;
-   width: 100%;
-}
-
-.house-sub-heading,
-.ministers-sub-heading {
+.house-sub-heading, // Select page
+.ministers-sub-heading { // Ministers page
    text-align: center;
    letter-spacing: 2px;
    color: $dark_text;
@@ -227,66 +260,6 @@ h3 {
    margin-bottom: 100px;
 }
 
-.constituency-form {
-   position: relative;
-  img.map {
-    height: 117px;
-    width: auto;
-    border: 0;
-  }
-  .constituency {
-     margin: 20px auto;
-     width: 100%;
-     max-width: 300px;
-     @include HelveticaNeue;
-     color: $dark;
-     background-color: $light;
-    .title {
-      width: 100%;
-      position: relative;
-      background-color: $medium;
-      .constituency_title {
-         font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;         font-weight: 200;
-         font-size: 1.5em;
-         color: $white;
-         letter-spacing: 2px;
-         padding-left: 10px;
-      }
-    }
-    .title:after {
-      top: 100%;
-    	left: 10%;
-    	border: solid transparent;
-    	content: " ";
-    	height: 0;
-    	width: 0;
-    	position: absolute;
-    	pointer-events: none;
-       border-color: rgba(92, 92, 92, 0);
-       border-top-color: $medium;
-    	border-width: 8px;
-    	margin-left: -8px;
-    }
-
-    ul {
-      list-style: none;
-      margin: 0 1em;
-      @include Helvetica;
-      li:first-child {
-         margin-top: 0;
-      }
-      li {
-         margin-top: 10px;
-         color: $dark_text;
-      }
-    }
-  }
-
-  .submit_button {
-    margin-top: 50px;
-    text-align: left;
-  }
-}
 
 /* Submit buttons - Select your constituency & Email your MP */
 #electorate_submit,
@@ -312,6 +285,8 @@ h3 {
 .no-bg {
    background-color: transparent;
 }
+
+/* Show Politician Page */
 
 .constituency-heading {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
@@ -370,13 +345,6 @@ h3 {
   }
 }
 
-.button_link {
-   margin-top: 25px;
-   padding: 5px 15px;
-   border: 0;
-   color: $white;
-}
-
 hr.med_grey {
    margin-top: 20px;
    border: 0;
@@ -388,6 +356,7 @@ hr.med_grey {
    background-image:      -o-linear-gradient(left, #ccc, #aaa, #ccc);
 }
 
+/* Contact Form - Politician & Site Feedback */
 .contact_form {
    margin: 20px auto;
    padding-bottom: 30px;
@@ -445,6 +414,7 @@ hr.med_grey {
    margin-left: 20px;
 }
 
+// Show user form contents after it's been posted
 .contact-form-content {
    width: 100%;
    padding-bottom: 100px;
@@ -471,7 +441,6 @@ hr.med_grey {
       text-align: left;
       margin-bottom: 10px;
    }
-
    .contact-text {
       width: 95%;
       margin: 0 auto;
@@ -496,6 +465,8 @@ hr.med_grey {
 .info-section {
    padding-top: 30px;
 }
+
+
 
 /* All Politicians Pages */
 
@@ -543,35 +514,7 @@ form.selection-form {
    }
 }
 
-/* Background colours */
-.mp_light {
-   background: url(/images/lowerhousebg.jpg);
-}
-.mp_medium {
-   background-color: $medium;
-}
-.mp_dark {
-   background-color: $dark;
-}
-.senator_light {
-   background: url(/images/upperhousebg.jpg);
-}
-.senator_medium {
-   background-color: $senate_medium;
-}
-.senator_dark {
-   background-color: $senate_dark;
-}
-.minister_light {
-   background: url(/images/ministersbg.jpg);
-}
-.minister_medium {
-   background-color: $minister_medium;
-}
-.minister_dark {
-   background-color: $minister_dark;
-}
-
+/* Select a Politician / Show a Politician Page */
 #politicians_container {
    width: 100%;
    height: 100%;
@@ -583,7 +526,7 @@ form.selection-form {
       min-width: 273px;
       max-width: 273px;
       margin: 5px 0;
-      border: 1px solid #bbb;
+      border: 1px solid #ddd;
       display: inline-block;
       .mp_name, .senator_name, .constituency, .minister_name {
          display: inline-block;
@@ -609,7 +552,7 @@ form.selection-form {
          text-align: left;
          .minister_position {
             font-family: Helvetica, Arial, sans-serif;
-            font-weight: 400;
+            font-weight: 200;
             color: $white;
             letter-spacing: 2px;
             line-height: 1.1em;
@@ -618,13 +561,14 @@ form.selection-form {
       }
       .politician_title {
          font-family: Helvetica, Arial, sans-serif;
-         font-weight: 400;
+         font-weight: 200;
          font-size: 1.2em;
          color: $white;
          letter-spacing: 2px;
          padding-left: 10px;
       }
 
+      /* Arrow */
       .mp_name:after,
       .senator_name:after,
       .minister_name:after {
@@ -695,6 +639,10 @@ form.selection-form {
       padding: 10px;
    }
 }
+
+
+
+/* Find a Politician Page */
 
 .search {
    width: auto;
@@ -786,6 +734,8 @@ form.selection-form {
    background-color: lighten(#ccc, 10%);
    border: 3px solid $dark_text;
 }
+
+
 
 
 @media all and (min-width: 1024px), (min-width: 769px) and (max-width: 1023px) {
@@ -916,10 +866,10 @@ form.selection-form {
       left: 0;
    }
 
-   .contents {
-      left: 0;
-      border: 0;
-   }
+   // .contents {
+   //    left: 0;
+   //    border: 0;
+   // }
    #politicians_container {
       .politician {
          margin-bottom: 10px;
@@ -971,11 +921,6 @@ form.selection-form {
       width: 100%;
       height: 100%;
       border-left: 10px solid transparent;
-   }
-
-   .contents {
-      left: 0;
-      border: 0;
    }
 
    .heading {
@@ -1126,11 +1071,6 @@ form.selection-form {
       width: 100%;
       height: 100%;
       border-left: 10px solid transparent;
-   }
-
-   .contents {
-      left: 0;
-      border: 0;
    }
 
    .header {
