--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4705,6 +4705,13 @@ footer {
   .heading {
     font-size: 3.8em; } }
 @media all and (max-width: 768px) {
+  body {
+    background: url(/images/background_768.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
+
   .page-body {
     overflow-x: hidden;
     position: relative; }
@@ -4767,6 +4774,13 @@ footer {
   .logo {
     width: 170px; } }
 @media all and (max-width: 480px) {
+  body {
+    background: url(/images/background_480.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; }
+
   .heading {
     font-size: 2.2em; }
 
