--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -190,6 +190,13 @@ footer {
 }
 
 @media all and (max-width: 768px) {
+   body {
+     background: url(/images/background_768.jpg) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+   }
    .page-body {
       overflow-x: hidden;
         position: relative;
@@ -202,11 +209,6 @@ footer {
    .page-body-pushed {
       left: 120px;
    }
-
-   // .heading {
-   //    font-size: 4.8em;
-   //    font-weight: 100;
-   // }
 
    .postcode-search  {
       top: 20%;
@@ -288,6 +290,14 @@ footer {
 }
 
 @media all and (max-width: 480px) {
+   body {
+     background: url(/images/background_480.jpg) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+   }
+
    .heading {
       font-size: 2.2em;
    }
@@ -298,6 +308,8 @@ footer {
 }
 
 @media all and (max-width: 320px) {
+
+
    .title {
       margin: 0;
       padding: 0;
