--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -1,4 +1,3 @@
-// @import 'reset';
 @import 'foundation';
 @import 'normalize';
 
@@ -37,7 +36,7 @@ h1 {
 
 h2 {
    font-family: Helvetica, Arial, sans-serif;
-   font-weight: 500;
+   font-weight: 300;
    color: darken($dark_text, 20%);
    font-size: 1.2em;
    letter-spacing: 2px;
@@ -124,7 +123,7 @@ h2 {
       text-align: right;
       label {
         font-family: Helvetica, Arial, sans-serif;
-        font-weight: 500;
+        font-weight: 300;
         color: darken($dark_text, 20%);
         font-size: 1.2em;
         letter-spacing: 2px;
@@ -175,7 +174,7 @@ footer {
     color: $white;
     font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-weight: 200;
-    font-size: 0.8em;
+    font-size: 0.9em;
     letter-spacing: 1px;
     margin-bottom: 5px;
   }
@@ -325,6 +324,16 @@ footer {
 
    .logo {
       width: 80px;
+   }
+}
+
+
+@media screen and (device-aspect-ratio: 16/9), screen and (device-aspect-ratio: 16/10) {
+   .heading {
+      font-size: 1.4em;
+   }
+   .logo {
+      width: 60px;
    }
 }
 
