Best viewed in portrait orientation on mobile devices

--- a/public/css/menu_mediaqueries.css
+++ b/public/css/menu_mediaqueries.css
@@ -333,3 +333,6 @@ footer.menu-footer {
     .slidermenu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  .menu, .slidermenu {
+    display: none; } }
