--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4591,6 +4591,9 @@ h2 {
   letter-spacing: 2px;
   padding: 5px 0; }
 
+.warning {
+  display: none; }
+
 #menu-button.white_text i {
   color: rgba(255, 255, 255, 0.8); }
 
@@ -4800,6 +4803,32 @@ footer {
 
   .logo {
     width: 80px; } }
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  body {
+    background: none;
+    max-width: 100%;
+    max-height: 100%; }
+
+  .warning {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 40%;
+    background-color: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.1em;
+    text-align: center;
+    color: #8f8f8f;
+    display: block; }
+    .warning i {
+      font-size: 3em; }
+
+  .row .container,
+  .header,
+  .logo,
+  .postcode-form,
+  #menu-button.white_text {
+    display: none; } }
 footer.menu-footer {
   position: absolute;
   bottom: 0;
@@ -5135,3 +5164,6 @@ footer.menu-footer {
     .slidermenu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  .menu, .slidermenu {
+    display: none; } }
