--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4898,6 +4898,9 @@ footer.menu-footer {
     .slidermenu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  .menu, .slidermenu {
+    display: none; } }
 * {
   margin: 0; }
 
@@ -4908,6 +4911,9 @@ body {
   width: 100%;
   font-size: 100%;
   background-color: #f2f2eb; }
+
+.warning {
+  display: none; }
 
 /* Basic Layout Boxes */
 .row, .column, .columns {
@@ -5835,3 +5841,28 @@ form.selection-form {
 
   .contact-text {
     font-size: 0.8em; } }
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  body {
+    background: none;
+    max-width: 100%;
+    max-height: 100%; }
+
+  .warning {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 40%;
+    background-color: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.1em;
+    text-align: center;
+    color: #8f8f8f;
+    display: block; }
+    .warning i {
+      font-size: 3em; }
+
+  .container,
+  .header,
+  .logo,
+  #menu-button.white_text {
+    display: none; } }
