--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -43,6 +43,10 @@ h2 {
    padding: 5px 0;
 }
 
+.warning {
+   display: none;
+}
+
 #menu-button.white_text {
    i {
       color: rgba(255,255,255,0.8);
@@ -327,5 +331,35 @@ footer {
    }
 }
 
+@media screen and (max-height: 480px) and (orientation: landscape) {
+   body {
+      background: none;
+      max-width: 100%;
+      max-height: 100%;
+   }
+   .warning {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 40%;
+      background-color: #fff;
+      font-family: Helvetica, Arial, sans-serif;
+      font-size: 1.1em;
+      text-align: center;
+      color: lighten($dark_text, 20%);
+      display: block;
+      i {
+         font-size: 3em;
+      }
+   }
+
+   .row .container,
+   .header,
+   .logo,
+   .postcode-form,
+   #menu-button.white_text {
+      display: none;
+   }
+}
 
 @import 'menu_mediaqueries'
