--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -48,6 +48,9 @@ body {
   background-color: $white;
 }
 
+.warning {
+   display: none;
+}
 
 /* Basic Layout Boxes */
 
@@ -1216,5 +1219,35 @@ form.selection-form {
    }
    .contact-text {
       font-size: 0.8em;
+   }
+}
+
+@media screen and (max-height: 480px) and (orientation: landscape) {
+   body {
+      background: none;
+      max-width: 100%;
+      max-height: 100%;
+   }
+   .warning {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 40%;
+      background-color: #fff;
+      font-family: Helvetica, Arial, sans-serif;
+      font-size: 1.1em;
+      text-align: center;
+      color: lighten($dark_text, 20%);
+      display: block;
+      i {
+         font-size: 3em;
+      }
+   }
+
+   .container,
+   .header,
+   .logo,
+   #menu-button.white_text {
+      display: none;
    }
 }
