--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -138,6 +138,7 @@ h2 {
         font-family: FontAwesome;
         width: 90px;
         display: inline-block;
+        font-size:16px;
       }
       input[type=submit] {
         font-family: Helvetica, Arial, sans-serif;
