--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4805,31 +4805,28 @@ footer {
   .logo {
     width: 80px; } }
 @media screen and (max-height: 480px) and (orientation: landscape) {
-  body {
-    background: none;
-    max-width: 100%;
-    max-height: 100%; }
+  .heading {
+    font-size: 2.5em; }
 
-  .warning {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 40%;
-    background-color: #fff;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.1em;
-    text-align: center;
-    color: #8f8f8f;
-    display: block; }
-    .warning i {
-      font-size: 3em; }
+  .logo {
+    width: 150px; }
 
-  .row .container,
-  .header,
-  .logo,
-  .postcode-form,
-  #menu-button.white_text {
-    display: none; } }
+  h2 {
+    color: #101010;
+    margin-right: 5px; }
+
+  .postcode-search {
+    top: 60px; }
+    .postcode-search .postcode-form {
+      background-color: rgba(255, 255, 255, 0.6);
+      padding: 0;
+      border-radius: 0; }
+    .postcode-search .form .top-row {
+      width: 100%; }
+      .postcode-search .form .top-row label {
+        color: #101010; }
+      .postcode-search .form .top-row input[type=submit] {
+        margin: 3px 5px 3px 8px; } }
 footer.menu-footer {
   position: absolute;
   bottom: 0;
@@ -4850,7 +4847,7 @@ footer.menu-footer {
       color: #555; }
 
 /* Sliding menu */
-@media all and (max-width: 768px) {
+@media all and (max-width: 768px) and (min-height: 481px) {
   .menu {
     display: none; }
 
@@ -4868,7 +4865,7 @@ footer.menu-footer {
     color: #5c5c5c;
     font-size: 2em; }
     #menu-button i {
-      color: #f2f2f2; }
+      color: #5c5c5c; }
 
   .menu-button-left {
     left: 20px; }
@@ -5055,7 +5052,7 @@ footer.menu-footer {
       position: absolute;
       left: 120px; } }
 /* Mobiles in landscape */
-@media all and (max-height: 360px) {
+@media screen and (max-height: 480px) {
   .menu {
     display: none; }
 
@@ -5073,7 +5070,7 @@ footer.menu-footer {
     color: #5c5c5c;
     font-size: 2em; }
     #menu-button i {
-      color: #f2f2f2; }
+      color: #5c5c5c; }
 
   .menu-button-left {
     left: 20px; }
@@ -5114,7 +5111,6 @@ footer.menu-footer {
         list-style: none;
         text-align: center;
         width: 120px;
-        min-height: 30px;
         border-bottom: 1px solid #444;
         font-family: 'Helvetica Neue', sans-serif;
         color: #f2f2eb;
@@ -5126,24 +5122,22 @@ footer.menu-footer {
           vertical-align: middle;
           width: 120px;
           padding: 3px;
-          min-height: 30px;
           font-size: 0.9em; }
       .slidermenu ul li.top {
         border-top: 1px solid #444; }
+    .slidermenu br {
+      display: none; }
     .slidermenu i {
-      color: #555;
-      font-size: 1.3em; }
+      display: none; }
     .slidermenu ul.sub-menu {
       display: block;
       width: 120px;
-      min-height: 120px;
       list-style: none;
       position: absolute;
       left: -9999px;
       background-color: #1d1d1d; }
       .slidermenu ul.sub-menu li.sub-menu-section {
         width: 120px;
-        height: 30px;
         border-bottom: 1px solid #444;
         border-right: 5px solid transparent;
         display: table;
@@ -5161,10 +5155,7 @@ footer.menu-footer {
     .slidermenu ul li.menu-section:hover {
       border-right: 5px solid #f8720a; }
       .slidermenu ul li.menu-section:hover i {
-        color: #999; }
+        display: none; }
     .slidermenu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
-@media screen and (max-height: 480px) and (orientation: landscape) {
-  .menu, .slidermenu {
-    display: none; } }
